@@ -5,7 +5,7 @@
 if ((_this select 1) in actionKeys "GetOver" && {alive player && {currentWeapon player == primaryWeapon player && {currentWeapon player != "" && {isNull objectParent player && {speed player > 11 && {stance player == "STAND" && {getFatigue player < 0.5 && {isTouchingGround (vehicle player) &&  {!(player getVariable ["xr_pluncon", false]) && {!(player getVariable ["ace_isunconscious", false]) && {!d_p_isju}}}}}}}}}}}) then {
 	d_p_isju = true;
 	0 spawn {
-		scriptName "spawn_setupplayer4";
+		scriptName "spawn jumpover";
 		private _v = velocity player;
 		private _veloH = _v vectorAdd [0.6, 0.6, 0.1];
 		private _veloL = _v vectorAdd [0, 0, -1];
