@@ -25,7 +25,14 @@ if (!_issniper) then {
 private _ogroup = [d_side_enemy] call d_fnc_creategroup;
 private _sm_vec = _ogroup createUnit [_type, _poss, [], 0, "NONE"];
 [_sm_vec] joinSilent _ogroup;
+_sm_vec allowDamage false;
 _ogroup deleteGroupWhenEmpty true;
+_sm_vec spawn {
+	scriptName "spawn_sideelimo";
+	sleep 20;
+	_this setDamage 0;
+	_this allowDamage true;
+};
 _sm_vec call d_fnc_removenvgoggles_fak;
 _sm_vec call d_fnc_addkillednormal;
 d_x_sm_rem_ar pushBack _sm_vec;
