@@ -1,4 +1,5 @@
 // by Xeno
+//#define __DEBUG__
 #define THIS_FILE "fn_sideprisoners.sqf"
 #include "..\..\x_setup.sqf"
 
@@ -16,17 +17,20 @@ private _newgroup = [d_own_side] call d_fnc_creategroup;
 private _newgroup = [civilian] call d_fnc_creategroup;
 #endif
 private _units = [_pos, call d_fnc_getunitlistc, _newgroup, false, false] call d_fnc_makemgroup;
-private _leader = leader _newgroup;
-_leader setSkill 1;
-_newgroup allowFleeing 0;
-_newgroup deleteGroupWhenEmpty true;
 {
 	removeAllWeapons _x;
 	_x setCaptive true;
 	_x disableAI "PATH";
+	_x allowDamage false;
 } forEach _units;
+private _leader = leader _newgroup;
+_leader setSkill 1;
+_newgroup allowFleeing 0;
+_newgroup deleteGroupWhenEmpty true;
 
 d_x_sm_rem_ar append _units;
+
+__TRACE_1("","_units")
 
 if (d_with_dynsim == 0) then {
 	[_newgroup] spawn d_fnc_enabledynsim;
@@ -42,10 +46,20 @@ sleep 1;
 
 sleep 32.123;
 
+_units spawn {
+	scriptName "spawn sideevac";
+	sleep 30;
+	{
+		_x setDamage 0;
+		_x allowDamage true;
+	} forEach _this;
+};
+
 private _hostages_reached_dest = false;
 private _all_dead = false;
 private _rescued = false;
 private _mforceendtime = time + 2400;
+__TRACE_1("","_mforceendtime")
 
 private _rescuer = objNull;
 #ifdef __TT__
@@ -53,14 +67,16 @@ private _winner = 0;
 #endif
 while {!_hostages_reached_dest && {!_all_dead && {!d_sm_resolved}}} do {
 	if (isMultiplayer && {(call d_fnc_PlayersNumber) == 0}) then {
-		_mforceendtime = _mforceendtime - time;
+		__TRACE("No players")
 		while {true} do {
 			sleep (1.012 + random 1);
 			if ((call d_fnc_PlayersNumber) > 0) exitWith {};
 		};
-		_mforceendtime = time + _mforceendtime;
+		_mforceendtime = time + 2400;
+		__TRACE_1("1","_mforceendtime")
 	};
 	if (_units findIf {alive _x} == -1) exitWith {
+		__TRACE("All dead exiting")
 		_all_dead = true;
 	};
 	if (!_rescued) then {
@@ -71,6 +87,7 @@ while {!_hostages_reached_dest && {!_all_dead && {!d_sm_resolved}}} do {
 				if (alive _x && {(_x call d_fnc_isplayer) && {!(_x getVariable ["xr_pluncon", false]) && {!(_x getVariable ["ace_isunconscious", false])}}}) exitWith {
 					_rescued = true;
 					_mforceendtime = time + 2400;
+					__TRACE_2("rescued","_rescued","_mforceendtime")
 					_rescuer = _x;
 					{
 						_x setCaptive false;
@@ -91,6 +108,8 @@ while {!_hostages_reached_dest && {!_all_dead && {!d_sm_resolved}}} do {
 		private _tmp_flag = if (_winner == 1) then {d_EFLAG_BASE} else {d_WFLAG_BASE};
 #endif
 		_hostages_reached_dest = _units findIf {alive _x && {(vehicle _x) distance2D _tmp_flag < 50 || {!isNil "d_flag_airfield" && {(vehicle _x) distance2D d_flag_airfield < 50}}}} > -1;
+		
+		__TRACE_1("1","_hostages_reached_dest")
 		
 		if (!_hostages_reached_dest) then {
 			private _fidx = _units findIf {alive _x};
@@ -113,14 +132,18 @@ while {!_hostages_reached_dest && {!_all_dead && {!d_sm_resolved}}} do {
 #endif
 		[missionNamespace, ["d_sm_p_pos", getPosATL _tmp_flag]] remoteExecCall ["setVariable", [0, -2] select isDedicated];
 	};
-	if (time > _mforceendtime) then {
+	if (time > _mforceendtime) exitWith {
 		{
 			_x setDamage 1;
 		} forEach _units;
 		_all_dead = true;
+		__TRACE("Reached end time")
 	};
 	sleep 5.123;
 };
+
+__TRACE_3("over","_hostages_reached_dest","_all_dead","_rescued")
+__TRACE_1("over","_mforceendtime")
 
 if (!d_sm_resolved) then {
 	if (_all_dead) then {
