@@ -4,4 +4,8 @@
 #include "..\x_setup.sqf"
 
 _this allowDamage false;
-_this spawn {sleep 20; _this allowDamage true};
+_this spawn {
+	scriptname "spawn nodamoff";
+	sleep 20;
+	_this allowDamage true;
+};
